8""""8                  
8    8 e   e eeeee eeeee
8eeee8 8   8   8   8  88
88   8 8e  8   8e  8   8
88   8 88  8   88  8   8
88   8 88ee8   88  8eee8

          3.0


The future of IRC bots is here! Xelhua gives to you, Auto 3.0, a new version of
the popular Auto IRC bot.

In this alpha8 release, we have added:

* A module to get information on a package in AUR (AUR).
* Support for installs to custom locations.
* Support for system-wide installs. (/usr or /usr/local)
* The `wizard` utility, for creating local Auto config directories.

Bug fixes:

* Fixed an issue in auto --help that incorrectly displayed the binary name.
* Fixed an exploit in QDB that allowed users to use services fantasy commands
  with the bot's account.
* Fixed a bug in LinkTitle that caused multi-line <title>'s to display wrong.

Incompatibilities:

None

We thank you for choosing Auto. Please remember that he is coming to late
development stages soon, and testers are needed! But we hope we've piqued
your interest, as Auto's upcoming module repository will allow modules to be
created by anyone and uploaded there for everyone to use.

Auto's goal is to create an efficient, stable and highly customizable IRC bot
in Perl. To offer an alternative to other platforms.

Enjoy Auto 3.0.0 Alpha 8!